[package]
name = "example-gamma"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15", features = ["png", "jpeg"]}
wasm-logger = "0.2"
log = "0.4"
wasm-bindgen = "0.2.99"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bevy_panorbit_camera = "0.20.1"
bevy_blendy_cameras = "0.6"